Fix service-context width alignment at 1024 breakpoint

--- a/sass/blocks/_service-context.scss
+++ b/sass/blocks/_service-context.scss
@@ -17,10 +17,10 @@
 
 	@include lg {
 		width: 100%;
-		max-width: 944px;
-		padding: 0 20px;
+		max-width: min(1840px, calc(100vw - var(--scrollbar-width) - 40px));
+		padding: 0 4px;
 		margin: 0 auto;
-		box-sizing: content-box;
+		box-sizing: border-box;
 	}
 
 	@include md {
