--- a/style.css
+++ b/style.css
@@ -7520,10 +7520,10 @@ a.phone-button:focus,
 @media (max-width: 1024px) {
   .single-service .service-context-container {
     width: 100%;
-    max-width: 944px;
-    padding: 0 20px;
+    max-width: min(1840px, 100vw - var(--scrollbar-width) - 40px);
+    padding: 0 4px;
     margin: 0 auto;
-    box-sizing: content-box;
+    box-sizing: border-box;
   }
 }
 @media (max-width: 768px) {
